# bacnet-client

./: .gitignore  README.md  azure-pipelines.yml  build.sh  pyproject.toml
docs/: Poetry_instructions.md
src/bacnet_client/: Device.py  DeviceDiscovery.py  DeviceManagement.py  MongoClient.py  Point.py  PointManagement.py  PointPolling.py  RemoteManagement.py  SelfManagement.py  __main__.py  app.py  local-device.ini
src/res/: resmgr.sh
tests/: test_device.py
