[tool.poetry]
name = "bacnet-client"
version = "0.0.10"
description = ""
authors = ["viteski <vsmolinski@vitek.dev>"]
readme = "README.md"
packages = [{include = "bacnet_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ifaddr = "^0.2.0"
pymongo = "^4.3.3"
motor = "^3.1.2"
pytz = "^2023.3"
bacpypes3 = {git = "https://github.com/viteski/BACpypes3.git", rev = "develop"}

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
